update for vapor-pr

--- a/docs/documentation/next/next_vapor_pressure.ipynb
+++ b/docs/documentation/next/next_vapor_pressure.ipynb
@@ -12,6 +12,8 @@
     "\n",
     "In this notebook, we will explore the strategies for calculating vapor pressure as implemented in the `vapor_pressure` module. These strategies are essential for accurately modeling and understanding the behavior of aerosols in equilibrium with a liquid phase.\n",
     "\n",
+    "Wikipedia: [Vapor Pressure](https://en.wikipedia.org/wiki/Vapor_pressure)\n",
+    "\n",
     "## Units\n",
     "All measurements and calculations in this module adhere to the base SI units:\n",
     "- Molar mass is in kilograms per mole (kg/mol).\n",
@@ -30,7 +32,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Import the functions from the particula package\n",
-    "from particula.next import gas_vapor_pressure"
+    "from particula.next.gas import vapor_pressure"
    ]
   },
   {
@@ -39,7 +41,7 @@
    "source": [
     "## Strategies for Vapor Pressure Calculations\n",
     "\n",
-    "In our framework, all strategies for calculating vapor pressure are encapsulated within classes that inherit from the `VaporPressureStrategy` abstract base class. This design ensures that each strategy conforms to a standardized interface, making them interchangeable and simplifying integration with other components of our system.\n",
+    "In our framework, all strategies for calculating vapor pressure are encapsulated within classes that inherit from the `VaporPressureStrategy` abstract base class. This design ensures that each strategy conforms to a standardized interface, making them interchangeable and simplifying integration with other components of our modular framework.\n",
     "\n",
     "### Core Functions\n",
     "We define two primary functions that form the backbone of our vapor pressure calculations:\n",
@@ -48,7 +50,7 @@
     "\n",
     "- `calculate_concentration`: This function inversely calculates the concentration of a gas from its partial pressure, molar mass, and temperature, also using the ideal gas law.\n",
     "\n",
-    "These functions ensure that our calculations are consistent and can be reused across different strategies.\n",
+    "These functions can be reused for different strategies.\n",
     "\n",
     "### Abstract Base Class\n",
     "The `VaporPressureStrategy` class serves as an abstract base class that outlines the necessary methods for vapor pressure calculations:\n",
@@ -107,20 +109,20 @@
    "source": [
     "# Initialize a specific strategy for calculating butanol's vapor pressure using Antoine's equation.\n",
     "# We set the coefficients 'a', 'b', and 'c' which are specific to butanol.\n",
-    "butanol_antione = gas_vapor_pressure.AntoineVaporPressureStrategy(\n",
+    "butanol_antione = vapor_pressure.AntoineVaporPressureStrategy(\n",
     "    a=7.838, b=1558.19, c=196.881)\n",
     "\n",
     "# Initialize a strategy for styrene using a factory method.\n",
     "# A factory method is a way to create objects without specifying the exact class of object that will be created.\n",
     "# We pass 'antoine' as the strategy name and the coefficients as a dictionary.\n",
     "styrene_coefficients = {'a': 6.924, 'b': 1420, 'c': 226}\n",
-    "styrene_antione = gas_vapor_pressure.vapor_pressure_factory(\n",
+    "styrene_antione = vapor_pressure.vapor_pressure_factory(\n",
     "    strategy='antoine', **styrene_coefficients)\n",
     "\n",
     "# Similar to styrene, initialize a strategy for water using the factory method.\n",
     "# note the strategy name is case-insensitive.\n",
     "water_coefficients = {'a': 7.949017, 'b': 1657.462, 'c': 227.02}\n",
-    "water_antione = gas_vapor_pressure.vapor_pressure_factory(\n",
+    "water_antione = vapor_pressure.vapor_pressure_factory(\n",
     "    strategy='Antoine', **water_coefficients)\n",
     "\n",
     "# Calculate and print the vapor pressures at 300 Kelvin for each substance using the initialized strategies.\n",
@@ -427,7 +429,7 @@
    "source": [
     "# Setting a constant vapor pressure at 300 K for water\n",
     "water_pure_at_300K = 1234.56  # in Pascals (Pa)\n",
-    "water_constant_strategy = gas_vapor_pressure.vapor_pressure_factory(\n",
+    "water_constant_strategy = vapor_pressure.vapor_pressure_factory(\n",
     "    strategy='constant', vapor_pressure=water_pure_at_300K)\n",
     "\n",
     "# Setting parameters for the Clausius-Clapeyron equation for water\n",
@@ -436,11 +438,11 @@
     "    'temperature_initial': 300,  # Initial temperature in Kelvin\n",
     "    'pressure_initial': water_pure_at_300K  # Initial pressure in Pascals\n",
     "}\n",
-    "water_clausius_clapeyron_strategy = gas_vapor_pressure.vapor_pressure_factory(\n",
+    "water_clausius_clapeyron_strategy = vapor_pressure.vapor_pressure_factory(\n",
     "    strategy='clausius_clapeyron', **water_clausius_clapeyron_parameters)\n",
     "\n",
     "# Using the Water Buck strategy, no additional parameters needed\n",
-    "water_buck_strategy = gas_vapor_pressure.vapor_pressure_factory(\n",
+    "water_buck_strategy = vapor_pressure.vapor_pressure_factory(\n",
     "    strategy='water_buck')\n",
     "\n",
     "# Define a range of temperatures for which to calculate vapor pressures\n",
@@ -497,7 +499,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on function calculate_concentration in module particula.next.gas_vapor_pressure:\n",
+      "Help on function calculate_concentration in module particula.next.gas.vapor_pressure:\n",
       "\n",
       "calculate_concentration(partial_pressure: Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]], molar_mass: Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]], temperature: Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]]) -> Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]]\n",
       "    Calculate the concentration of a gas from its partial pressure, molar mass,\n",
@@ -517,7 +519,7 @@
     }
    ],
    "source": [
-    "help(gas_vapor_pressure.calculate_concentration)"
+    "help(vapor_pressure.calculate_concentration)"
    ]
   },
   {
@@ -529,7 +531,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on function calculate_partial_pressure in module particula.next.gas_vapor_pressure:\n",
+      "Help on function calculate_partial_pressure in module particula.next.gas.vapor_pressure:\n",
       "\n",
       "calculate_partial_pressure(concentration: Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]], molar_mass: Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]], temperature: Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]]) -> Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]]\n",
       "    Calculate the partial pressure of a gas from its concentration, molar mass,\n",
@@ -547,7 +549,7 @@
     }
    ],
    "source": [
-    "help(gas_vapor_pressure.calculate_partial_pressure)"
+    "help(vapor_pressure.calculate_partial_pressure)"
    ]
   },
   {
@@ -559,7 +561,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on class VaporPressureStrategy in module particula.next.gas_vapor_pressure:\n",
+      "Help on class VaporPressureStrategy in module particula.next.gas.vapor_pressure:\n",
       "\n",
       "class VaporPressureStrategy(abc.ABC)\n",
       " |  Abstract class for vapor pressure calculations. The methods\n",
@@ -659,7 +661,7 @@
     }
    ],
    "source": [
-    "help(gas_vapor_pressure.VaporPressureStrategy)"
+    "help(vapor_pressure.VaporPressureStrategy)"
    ]
   },
   {
@@ -671,9 +673,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on function vapor_pressure_factory in module particula.next.gas_vapor_pressure:\n",
+      "Help on function vapor_pressure_factory in module particula.next.gas.vapor_pressure:\n",
       "\n",
-      "vapor_pressure_factory(strategy: str, **kwargs) -> particula.next.gas_vapor_pressure.VaporPressureStrategy\n",
+      "vapor_pressure_factory(strategy: str, **kwargs) -> particula.next.gas.vapor_pressure.VaporPressureStrategy\n",
       "    Factory method to create a concrete VaporPressureStrategy object.\n",
       "    \n",
       "    Args:\n",
@@ -691,7 +693,7 @@
     }
    ],
    "source": [
-    "help(gas_vapor_pressure.vapor_pressure_factory)"
+    "help(vapor_pressure.vapor_pressure_factory)"
    ]
   },
   {
@@ -703,7 +705,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on class ConstantVaporPressureStrategy in module particula.next.gas_vapor_pressure:\n",
+      "Help on class ConstantVaporPressureStrategy in module particula.next.gas.vapor_pressure:\n",
       "\n",
       "class ConstantVaporPressureStrategy(VaporPressureStrategy)\n",
       " |  ConstantVaporPressureStrategy(vapor_pressure: Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]])\n",
@@ -817,7 +819,7 @@
     }
    ],
    "source": [
-    "help(gas_vapor_pressure.ConstantVaporPressureStrategy)"
+    "help(vapor_pressure.ConstantVaporPressureStrategy)"
    ]
   },
   {
@@ -829,7 +831,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on class AntoineVaporPressureStrategy in module particula.next.gas_vapor_pressure:\n",
+      "Help on class AntoineVaporPressureStrategy in module particula.next.gas.vapor_pressure:\n",
       "\n",
       "class AntoineVaporPressureStrategy(VaporPressureStrategy)\n",
       " |  AntoineVaporPressureStrategy(a: Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]] = 0.0, b: Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]] = 0.0, c: Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]] = 0.0)\n",
@@ -862,6 +864,8 @@
       " |      Pascals.\n",
       " |      \n",
       " |      References:\n",
+      " |      - https://en.wikipedia.org/wiki/Antoine_equation (but in Kelvin)\n",
+      " |      - Kelvin form:\n",
       " |      https://onlinelibrary.wiley.com/doi/pdf/10.1002/9781118135341.app1\n",
       " |  \n",
       " |  ----------------------------------------------------------------------\n",
@@ -949,7 +953,7 @@
     }
    ],
    "source": [
-    "help(gas_vapor_pressure.AntoineVaporPressureStrategy)"
+    "help(vapor_pressure.AntoineVaporPressureStrategy)"
    ]
   },
   {
@@ -961,7 +965,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on class ClausiusClapeyronStrategy in module particula.next.gas_vapor_pressure:\n",
+      "Help on class ClausiusClapeyronStrategy in module particula.next.gas.vapor_pressure:\n",
       "\n",
       "class ClausiusClapeyronStrategy(VaporPressureStrategy)\n",
       " |  ClausiusClapeyronStrategy(latent_heat: Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]], temperature_initial: Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]], pressure_initial: Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]])\n",
@@ -1096,7 +1100,7 @@
     }
    ],
    "source": [
-    "help(gas_vapor_pressure.ClausiusClapeyronStrategy)"
+    "help(vapor_pressure.ClausiusClapeyronStrategy)"
    ]
   },
   {
@@ -1108,7 +1112,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on class WaterBuckStrategy in module particula.next.gas_vapor_pressure:\n",
+      "Help on class WaterBuckStrategy in module particula.next.gas.vapor_pressure:\n",
       "\n",
       "class WaterBuckStrategy(VaporPressureStrategy)\n",
       " |  Concrete implementation of the VaporPressureStrategy using the\n",
@@ -1226,7 +1230,7 @@
     }
    ],
    "source": [
-    "help(gas_vapor_pressure.WaterBuckStrategy)"
+    "help(vapor_pressure.WaterBuckStrategy)"
    ]
   },
   {
