--- a/pr-preview/pr-445/_sources/documentation/particle.ipynb
+++ b/pr-preview/pr-445/_sources/documentation/particle.ipynb
@@ -53,15 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "resulting radius from 99.99% cutoff is  4.1972292396604054e-08 meter\n",
-      "resulting radius from 99% cutoff is  5.628288472608393e-08 meter\n"
+      "Starting radius from 99.99% cutoff is  4.1972292396604054e-08 meter\n",
+      "Starting radius from 99% cutoff is  5.628288472608393e-08 meter\n"
      ]
     }
    ],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
      "output_type": "stream",
      "text": [
       "Particle mass:  [4.188790204786392e-24 3.3510321638291136e-23] kilogram\n",
-      "Friction factor:  [3.127639189424173e-15 1.2446393807134826e-14] kilogram / second\n"
+      "Friction factor:  [3.1276392144839314e-15 1.244639390633872e-14] kilogram / second\n"
      ]
     }
    ],
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,24 +274,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table><tbody><tr><th>Magnitude</th><td style='text-align:left;'><pre>[[8.835482748391875e-16 1.4836836108384949e-15]<br> [1.4836836108384949e-15 1.235668665276733e-15]]</pre></td></tr><tr><th>Units</th><td style='text-align:left;'>meter<sup>3</sup>/second</td></tr></tbody></table>"
+       "<table><tbody><tr><th>Magnitude</th><td style='text-align:left;'><pre>[[8.835482747955866e-16 1.4836836107072172e-15]<br> [1.4836836107072172e-15 1.2356686651065113e-15]]</pre></td></tr><tr><th>Units</th><td style='text-align:left;'>meter<sup>3</sup>/second</td></tr></tbody></table>"
       ],
       "text/latex": [
-       "$\\begin{pmatrix}8.835482748391875\\times 10^{-16} & 1.4836836108384949\\times 10^{-15}\\\\ \n",
-       "1.4836836108384949\\times 10^{-15} & 1.235668665276733\\times 10^{-15}\\end{pmatrix}\\ \\frac{\\mathrm{meter}^{3}}{\\mathrm{second}}$"
+       "$\\begin{pmatrix} & \\\\ \n",
+       " & \\end{pmatrix}\\ \\frac{\\mathrm{meter}^{3}}{\\mathrm{second}}$"
       ],
       "text/plain": [
        "array([[8.83548275e-16, 1.48368361e-15],\n",
        "       [1.48368361e-15, 1.23566867e-15]]) <Unit('meter ** 3 / second')>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,22 +302,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table><tbody><tr><th>Magnitude</th><td style='text-align:left;'><pre>[[2.3065250186958553e-15]]</pre></td></tr><tr><th>Units</th><td style='text-align:left;'>meter<sup>3</sup>/second</td></tr></tbody></table>"
+       "<table><tbody><tr><th>Magnitude</th><td style='text-align:left;'><pre>[[2.306525014899979e-15]]</pre></td></tr><tr><th>Units</th><td style='text-align:left;'>meter<sup>3</sup>/second</td></tr></tbody></table>"
       ],
       "text/latex": [
-       "$\\begin{pmatrix}2.3065250186958553\\times 10^{-15}\\end{pmatrix}\\ \\frac{\\mathrm{meter}^{3}}{\\mathrm{second}}$"
+       "$\\begin{pmatrix}\\end{pmatrix}\\ \\frac{\\mathrm{meter}^{3}}{\\mathrm{second}}$"
       ],
       "text/plain": [
-       "array([[2.30652502e-15]]) <Unit('meter ** 3 / second')>"
+       "array([[2.30652501e-15]]) <Unit('meter ** 3 / second')>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,22 +328,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table><tbody><tr><th>Magnitude</th><td style='text-align:left;'><pre>[[2.3065250186958553e-15]]</pre></td></tr><tr><th>Units</th><td style='text-align:left;'>meter<sup>3</sup>/second</td></tr></tbody></table>"
+       "<table><tbody><tr><th>Magnitude</th><td style='text-align:left;'><pre>[[2.306525014899979e-15]]</pre></td></tr><tr><th>Units</th><td style='text-align:left;'>meter<sup>3</sup>/second</td></tr></tbody></table>"
       ],
       "text/latex": [
-       "$\\begin{pmatrix}2.3065250186958553\\times 10^{-15}\\end{pmatrix}\\ \\frac{\\mathrm{meter}^{3}}{\\mathrm{second}}$"
+       "$\\begin{pmatrix}\\end{pmatrix}\\ \\frac{\\mathrm{meter}^{3}}{\\mathrm{second}}$"
       ],
       "text/plain": [
-       "array([[2.30652502e-15]]) <Unit('meter ** 3 / second')>"
+       "array([[2.30652501e-15]]) <Unit('meter ** 3 / second')>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,24 +354,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table><tbody><tr><th>Magnitude</th><td style='text-align:left;'><pre>[[1.8143554043998508e-14]<br> [7.479664416578196e-15]]</pre></td></tr><tr><th>Units</th><td style='text-align:left;'>meter<sup>3</sup>/second</td></tr></tbody></table>"
+       "<table><tbody><tr><th>Magnitude</th><td style='text-align:left;'><pre>[[1.8143554037039256e-14]<br> [7.479664412223585e-15]]</pre></td></tr><tr><th>Units</th><td style='text-align:left;'>meter<sup>3</sup>/second</td></tr></tbody></table>"
       ],
       "text/latex": [
-       "$\\begin{pmatrix}1.8143554043998508\\times 10^{-14}\\\\ \n",
-       "7.479664416578196\\times 10^{-15}\\end{pmatrix}\\ \\frac{\\mathrm{meter}^{3}}{\\mathrm{second}}$"
+       "$\\begin{pmatrix}\\\\ \n",
+       "\\end{pmatrix}\\ \\frac{\\mathrm{meter}^{3}}{\\mathrm{second}}$"
       ],
       "text/plain": [
        "array([[1.81435540e-14],\n",
-       "       [7.47966442e-15]]) <Unit('meter ** 3 / second')>"
+       "       [7.47966441e-15]]) <Unit('meter ** 3 / second')>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.8"
   },
   "orig_nbformat": 4
  },
