--- a/pr-preview/pr-455/_sources/documentation/next/next_vapor_pressure.ipynb
+++ b/pr-preview/pr-455/_sources/documentation/next/next_vapor_pressure.ipynb
@@ -92,11 +92,11 @@
     "\n",
     "- Water: \"Formula\": \"H2O\", \"A\": 7.94917, \"B\": 1657.462, \"C\": 227.02\n",
     "\n",
-    "## Direct, Builder, and Factory Patterns\n",
+    "## Direct Strategy, Builder, and Factory Patterns\n",
     "\n",
     "We will demonstrate the use of the direct, builder, and factory patterns to create instances of the `AntoineVaporPressure` strategy. These patterns provide different levels of abstraction and flexibility in object creation, catering to various use cases and design requirements.\n",
     "\n",
-    "- **Direct Pattern**: This pattern involves directly creating instances of the `AntoineVaporPressure` class with the required parameters. It is straightforward but may be less flexible when dealing with complex object creation or configuration.\n",
+    "- **Direct Strategy**: This involves directly creating instances of the `AntoineVaporPressure` class with the required parameters. It is straightforward but may be less flexible when dealing with complex object creation or configuration.\n",
     "- **Builder Pattern**: The builder pattern separates the construction of a complex object from its representation, allowing for more flexible and readable object creation. We will use a `VaporPressureBuilder` class to construct instances of the `AntoineVaporPressure` strategy with different parameters. The parameters can be set in any order, and the builder provides a clear and intuitive way to create objects.\n",
     "- **Factory Pattern**: The factory pattern provides an interface for creating objects without specifying the exact class of the object to be created. We will use a `VaporPressureFactory` class to create instances of the `AntoineVaporPressure` strategy based on the substance name. This pattern allows for dynamic object creation based on input parameters, enhancing flexibility and extensibility."
    ]
@@ -155,6 +155,15 @@
     "print(f'Butanol Antoine vapor pressure at 300 K: {butanol_antione.pure_vapor_pressure(300)} Pa')\n",
     "print(f'Styrene Antoine vapor pressure at 300 K: {styrene_antione.pure_vapor_pressure(300)} Pa')\n",
     "print(f'Water Antoine vapor pressure at 300 K: {water_antione.pure_vapor_pressure(300)} Pa')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Builder Validation\n",
+    "\n",
+    "Here we call the `AntoineBuilder` pattern, with incomplete parameters, to demonstrate the error handling mechanism."
    ]
   },
   {
