--- a/docs/Tutorials/Dynamics/Coagulation/Functional/Coagulation_Basic_4_ParticleResolved.ipynb
+++ b/docs/Tutorials/Dynamics/Coagulation/Functional/Coagulation_Basic_4_ParticleResolved.ipynb
@@ -414,7 +414,7 @@
     "\n",
     "import numpy as np\n",
     "\n",
-    "from particula.next import particles\n",
+    "from particula import particles\n",
     "from particula.dynamics import coagulation\n",
     "from particula.dynamics.coagulation import (\n",
     "    particle_resolved_method,\n",
