--- a/docs/Tutorials/Dynamics/Condensation/Condensation_1_Bin.ipynb
+++ b/docs/Tutorials/Dynamics/Condensation/Condensation_1_Bin.ipynb
@@ -27,7 +27,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# particula imports\n",
-    "from particula.next import particles\n",
+    "from particula import particles\n",
     "from particula.gas.atmosphere_builders import AtmosphereBuilder\n",
     "from particula.gas.vapor_pressure_factories import VaporPressureFactory\n",
     "from particula.gas.species_builders import GasSpeciesBuilder\n",
