--- a/docs/Tutorials/Dynamics/Customization/Adding_Particles_During_Simulation.ipynb
+++ b/docs/Tutorials/Dynamics/Customization/Adding_Particles_During_Simulation.ipynb
@@ -23,7 +23,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# particula imports\n",
-    "from particula.next import particles\n",
+    "from particula import particles\n",
     "from particula.aerosol import Aerosol\n",
     "\n",
     "from particula.gas.species_builders import PresetGasSpeciesBuilder\n",
