--- a/docs/Tutorials/Particle_Phase/Particle_Representation_Tutorial.ipynb
+++ b/docs/Tutorials/Particle_Phase/Particle_Representation_Tutorial.ipynb
@@ -20,7 +20,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from particula.next import particles"
+    "from particula import particles"
    ]
   },
   {
