--- a/docs/Tutorials/Aerosol/Aerosol_Tutorial.ipynb
+++ b/docs/Tutorials/Aerosol/Aerosol_Tutorial.ipynb
@@ -13,17 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from particula.particles.representation_builders import LimitedRadiusParticleBuilder\n",
-    "from particula.gas.atmosphere_builder import AtmosphereBuilder\n",
+    "from particula.particles.representation_builders import PresetParticleRadiusBuilder\n",
+    "from particula.gas.atmosphere_builders import AtmosphereBuilder\n",
     "from particula.gas.vapor_pressure_factories import VaporPressureFactory\n",
-    "from particula.gas.species_builder import GasSpeciesBuilder\n",
+    "from particula.gas.species_builders import GasSpeciesBuilder\n",
     "from particula.aerosol import Aerosol"
    ]
   },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
     "\n",
     "# Glycerol particle distribution\n",
     "lognormal_rep = (\n",
-    "    LimitedRadiusParticleBuilder()\n",
+    "    PresetParticleRadiusBuilder()\n",
     "    .set_mode(np.array([100]), \"nm\")\n",
     "    .set_geometric_standard_deviation(np.array([1.5]))\n",
     "    .set_number_concentration(np.array([1e4]), \"1/cm^3\")\n",
@@ -112,21 +112,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gas mixture at 298.15 K and 101325.0 Pa consisting of ['Glycerol']\n"
+      "Gas mixture at 298.15 K and 101325.0 Pa consisting of ['Glycerol']\n",
+      "[0]: Particle Representation:\n",
+      "\tStrategy: RadiiBasedMovingBin\n",
+      "\tActivity: ActivityIdealMass\n",
+      "\tSurface: SurfaceStrategyVolume\n",
+      "\tMass Concentration: 1.106e-07 [kg/m^3]\n",
+      "\tNumber Concentration: 1.000e+10 [#/m^3]\n"
      ]
     }
    ],
    "source": [
     "aerosol = Aerosol(atmosphere=atmosphere, particles=lognormal_rep)\n",
     "\n",
-    "print(aerosol.atmosphere)"
+    "print(aerosol)"
    ]
   },
   {
@@ -141,7 +147,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ParticulaDev_py311",
+   "display_name": "particula_dev312",
    "language": "python",
    "name": "python3"
   },
@@ -155,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
