--- a/docs/Tutorials/Gas_Phase/Notebooks/Gas_Species.ipynb
+++ b/docs/Tutorials/Gas_Phase/Notebooks/Gas_Species.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,9 +26,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Particula imports\n",
-    "from particula.gas.vapor_pressure_factories import VaporPressureFactory\n",
-    "from particula.gas.species import GasSpecies\n",
-    "from particula.gas.species_builders import GasSpeciesBuilder"
+    "from particula.gas import VaporPressureFactory, GasSpeciesBuilder"
    ]
   },
   {
@@ -49,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
