--- a/docs/Tutorials/Particle_Phase/Distribution_Tutorial.ipynb
+++ b/docs/Tutorials/Particle_Phase/Distribution_Tutorial.ipynb
@@ -28,9 +28,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from particula.particles.distribution_strategies import MassBasedMovingBin\n",
-    "from particula.particles.distribution_builders import RadiiBasedMovingBinBuilder\n",
-    "from particula.particles.distribution_factories import DistributionFactory"
+    "from particula.particles import MassBasedMovingBin, RadiiBasedMovingBinBuilder, DistributionFactory"
    ]
   },
   {
@@ -174,7 +172,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ParticulaDev_py311",
+   "display_name": "particula_dev312",
    "language": "python",
    "name": "python3"
   },
@@ -188,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
